<resources>
    <string name="app_name">InClass03</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="id_label">ID:</string>
    <string name="name_hint">Enter Name</string>
    <string name="email_hint">Enter Email</string>
    <string name="id_hint">Enter ID</string>
    <string name="dept_label">Dept:</string>
    <string name="select_label">Select</string>
    <string name="submit_label">Submit</string>
    <string name="dept_hint">Select Dept</string>
    <string name="CS_label">Computer Science</string>
    <string name="SIS_label">Software Info. Systems</string>
    <string name="BI_label">Bio Informatics</string>
    <string name="DS_label">Data Science</string>
    <string name="cancel_label">Cancel</string>
    <string name="registration_label">Registration</string>
    <string name="department_label">Department</string>
    <string name="profile_label">Profile</string>
    <string name="toast_enter_dept">Please select a Department</string>
    <string name="toast_mandatory">All the fields are mandatory</string>
    <string name="toast_names">Name field cannot contain numbers or special characters</string>
    <string name="toast_email">Please enter a valid email id</string>
</resources>