<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="63dp">

        <RadioButton
            android:id="@+id/radioButton_CS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CS_label" />

        <RadioButton
            android:id="@+id/radioButton_SIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SIS_label" />

        <RadioButton
            android:id="@+id/radioButton_BI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BI_label" />

        <RadioButton
            android:id="@+id/radioButton_DS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DS_label" />
    </RadioGroup>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/cancel_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_SelectDept"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/select_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>